# solentware-base

./: README  __init__.py  _run_core_tests  _run_db_tkinter_tests  _run_tests  apswapi.py  apswduapi.py  dbapi.py  dbduapi.py  dptapi.py  dptbase.py  dptduapi.py  dptdumultiapi.py  pyproject.toml  setup.cfg  setup.py  sqlite3api.py  sqlite3duapi.py  version.py
api/: bytebit.py  constants.py  database.py  filespec.py  record.py  recordset.py  shelf.py
api/test/: __init__.py  constants_test.py  database_test.py  filespec_test.py  record_test.py  shelf_test.py
basesup/: README  __init__.py  dbapi.py  dptapi.py  dptbase.py  dptduapi.py  dptdumultiapi.py
basesup/api/: __init__.py  constants.py  database.py  record.py  shelf.py
basesup/gui/: __init__.py  dptfilesize.py
gui/: dptfilesize.py
pylint/: pylint.conf
samples/: testdatabase.py  testdbapi.py  testdptapi.py  testdptbase.py  testdptduapi.py  testdptdumultiapi.py  testdptfilesize.py  testfilespec.py  testrecord.py  view_raw_records.py
solentware_base/: db_tcl.py  db_tkinterdu_database.py  dptdu_database.py  dptfastload_database.py  modulequery.py  ndbm_database.py
test/: dbapi_test.py  dbduapi_test.py  dptapi_test.py  dptbase_test.py  dptduapi_test.py  dptduapimulti_test.py  sqlite3api_test.py  sqlite3duapi_test.py  testdatabase.py  testdbapi.py  testdptapi.py  testdptbase.py  testdptduapi.py  testdptdumultiapi.py  testdptfilesize.py  testfilespec.py  testrecord.py  testshelf.py
tools/: __init__.py  bytebit.py  callbackexception.py  callthreadqueue.py  constants.py  dialogues.py  modulequery.py
(+114 files in other folders)
