[metadata]
name = solentware-base
version = 5.1.dev1
description = Bitmapped record number databases using Python interfaces to Berkeley DB, SQLite, UnQLite, Vedis, and DPT.
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Database
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    solentware_base
    solentware_base.core
    solentware_base.tools

[pycodestyle]
# E203 to fit black formatting and pylint.
# W503 is only default ignore which occurs at 2023-07-14, and style is what
# black formatting does if needed.  My preference is break after operator
# but easier to let black do what it wants.
# E722 is given for 'bare except' even if re-raised but pylint reports
# 'bare-except' only when the exception is not re-raised.
# E402 not added to 'ignore' list because it was possible to get rid of
# the reports without a corresponding 'wrong-import-position' from pylint
# by moving all unconditional imports (two at 2023-07-18) to before the
# conditional imports.
ignore=E203,W503,E722
